# lop

ch01/2.optionTest/: 07.option-Wall.c  08_st  a.out  a.out_1  a.out_3
ch02/2.make_gen/: ._task1.c  ._task2.c  ._task3.c  Makefile.10  Makefile.11  Makefile.4  Makefile.5  Makefile.6  Makefile.7  Makefile.8  Makefile.9  Makefile.bak  Makefile.dep  exam2  exam3  mytest  task1  task2  task3
ch03/1.libTest1_st/appSrc/: ._app.c  a.out
ch03/1.libTest1_st/include/: ._testlib.h
ch03/1.libTest1_st/libDynamic/: dltest
ch03/1.libTest1_st/libStatic/: ._max.c  ._min.c
ch03/2.libTest2_make_st/appSrc/: ._Makefile  Makefile
ch03/3.libTest4_make_st/appSrc/: ._makefile  app_shared  app_static  makefile
ch03/3.libTest4_make_st/libShared/: ._Makefile  Makefile
ch03/3.libTest4_make_st/libSrc/: ._Makefile
ch03/3.libTest4_make_st/libStatic/: ._Makefile  Makefile
ch04/1.basic/cmake/: CMakeLists.txt
ch04/2.var_cmd/1.var_st/cmake/: CMakeLists.txt
ch04/2.var_cmd/3.vat_trg_add_exe_st/cmake/: CMakeLists.txt
ch04/2.var_cmd/4.var_trg_add_lib_st/cmake/libs/: CMakeLists.txt
ch04/2.var_cmd/6.install_exe_st/: CMakeLists.txt
ch04/2.var_cmd/8.build_option_st/cmake/: CMakeLists.txt
ch05/make_app_st/01.macro_order/: makefile
ch05/make_app_st/03.assignment/: makefile
ch05/make_app_st/04.macro_DF_st/: makefile
ch05/make_app_st/05-1.libTest3_vpath_st/: makefile
ch05/make_app_st/05-1.libTest3_vpath_st/mylibs/: makefile
ch05/make_app_st/06.make_dep_st/: Make.mk
